name:                  ambiata-boris-queue
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           boris-queue

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           == 0.8.*
                    , ambiata-boris-core
                    , ambiata-mismi-core
                    , ambiata-mismi-sqs
                    , ambiata-p
                    , ambiata-x-aeson
                    , ambiata-x-eithert
                    , lens                            >= 4.6        && < 4.9
                    , text                            == 1.2.*
                    , transformers                    == 0.4.*
                    , ini                             == 0.3.3

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Boris.Queue

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-queue
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , ambiata-x-aeson
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-queue
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-mismi-sqs
                    , ambiata-mismi-sqs-test
                    , ambiata-p
                    , ambiata-x-eithert
                    , text
                    , QuickCheck                      == 2.7.*
                    , quickcheck-instances            == 0.3.*
