name: boris-service
version: 0.0.1
license: BSD3
author: Ambiata <info@ambiata.com>, Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2015 Ambiata. (c) 2019 Mark Hibberd
synopsis: project
category: System
cabal-version: >= 1.8
build-type: Custom
description: boris-http

library
  build-depends:
      base                            >= 3          && < 5
    , aeson                           == 1.*
    , boris-build
    , boris-core
    , boris-client
    , boris-git
    , async                           == 2.*
    , bytestring                      == 0.10.*
    , conduit                         >= 1.2        && < 1.4
    , conduit-extra                   >= 1.1        && < 1.4
    , containers                      == 0.5.*
    , directory                       == 1.*
    , filepath                        == 1.*
    , lens                            >= 4.6        && < 4.16
    , mmorph                          == 1.*
    , mtl                             == 2.2.*
    , nest                            == 0.*
    , process                         == 1.*
    , resourcet                       == 1.2.*
    , semigroups                      >= 0.16       && < 0.19
    , stm                             == 2.5.*
    , stm-chans                       == 3.0.*
    , text                            == 1.2.*
    , time                            >= 1.5        && < 1.10
    , transformers                    >= 0.4        && < 0.6
    , unordered-containers            == 0.2.*

  ghc-options: -Wall

  hs-source-dirs: src

  exposed-modules:
    Boris.Service.Boot
    Boris.Service.Build
    Boris.Service.Daemon
    Boris.Service.Discover
    Boris.Service.Git
    Boris.Service.Guard
    Boris.Service.Listener
    Boris.Service.Log
    Boris.Service.Remote
    Boris.Service.Snooze
    Boris.Service.Workspace

executable boris-service
  ghc-options: -Wall -threaded -O2
  hs-source-dirs: gen
  main-is: ../main/boris-service.hs
  build-depends:
      base
    , async
    , boris-core
    , boris-service
    , connection                      == 0.2.*
    , data-default                    == 0.6.*
    , http-client                     >= 0.4        && < 0.6
    , http-client-tls                 >= 0.2        && < 0.4
    , nest
    , text


executable boris-build
  ghc-options: -Wall -threaded -O2
  hs-source-dirs: gen
  main-is: ../main/boris-build.hs
  build-depends:
      base
    , async
    , boris-core
    , boris-client
    , boris-service
    , conduit
    , connection                      == 0.2.*
    , data-default                    == 0.6.*
    , http-client                     >= 0.4        && < 0.6
    , http-client-tls                 >= 0.2        && < 0.4
    , nest
    , optparse-applicative            >= 0.11       && < 0.15
    , text
    , time


test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  ghc-options: -Wall -threaded -O2
  hs-source-dirs: test
  build-depends:
      base                            >= 3          && < 5
    , boris-core
    , boris-core-test
    , boris-service
    , text
    , conduit
    , conduit-extra
    , directory
    , filepath
    , hedgehog == 0.6.*
    , process
    , text
    , temporary
    , transformers
