name:                  ambiata-boris-store
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              project
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           boris-store

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           == 0.8.*
                    , ambiata-boris-core
                    , ambiata-jebediah
                    , ambiata-mismi-core
                    , ambiata-p
                    , ambiata-spine
                    , ambiata-x-eithert
                    , ambiata-x-aeson
                    , amazonka-dynamodb               >= 1.3.6      && < 1.5
                    , conduit                         == 1.2.*
                    , conduit-extra                   == 1.1.*
                    , containers                      == 0.5.*
                    , lens                            >= 4.6        && < 4.13
                    , text                            == 1.2.*
                    , semigroups                      == 0.16.*
                    , time                            >= 1.5         && < 1.6
                    , transformers                    == 0.4.*
                    , time-locale-compat              == 0.1.*
                    , unordered-containers            == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Boris.Store.Build
                    Boris.Store.Lifecycle
                    Boris.Store.Index
                    Boris.Store.Schema
                    Boris.Store.Tick
                    Boris.Store.Results

test-suite test
  type:
                    exitcode-stdio-1.0

  main-is:
                    test.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-store
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , QuickCheck                      >= 2.7      && < 2.9
                    , quickcheck-instances            == 0.3.*

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-boris-core-test
                    , ambiata-boris-store
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-jebediah
                    , ambiata-mismi-core
                    , ambiata-mismi-core-test
                    , ambiata-p
                    , ambiata-spine-test
                    , ambiata-x-eithert
                    , text
                    , QuickCheck                      >= 2.7      && < 2.9
                    , quickcheck-instances            == 0.3.*
