name:                  ambiata-boris-core-test
version:               0.0.1
build-type:            Simple
cabal-version:         >= 1.8

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-boris-core
                    , ambiata-disorder-core
                    , ambiata-disorder-corpus
                    , ambiata-p
                    , text                            == 1.2.*
                    , QuickCheck                      >= 2.7        && < 2.10
                    , quickcheck-instances            == 0.3.*


  exposed-modules:
                    Test.Boris.Core.Arbitrary
